docker/k8s/sky-walking/overlays/dev/skywalking-oap-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skywalking-oap
spec:
  template:
    spec:
      containers:
        - name: skywalking-oap
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
